<resources>
    <string name="app_name">HikersWatch</string>
    <string name="hiker_s_watch">Hiker\'s Watch</string>
    <string name="latitude">Latitude: \u0020</string>
    <string name="longitude">Longitude: \u0020</string>
    <string name="altitude">Elevation (meters): \u0020</string>
    <string name="accuracy">Accuracy (meters): \u0020</string>
    <string name="address">Address: \u0020</string>
    <string name="update">Update</string>
    <string name="key">&amp;key=AIzaSyBGrAsDLH9BXUCoTO9Jx-jA2vXReYF_5NQ</string>
    <string name="api">https://maps.googleapis.com/maps/api/elevation/json?locations=</string>
</resources>